--- a/index.html
+++ b/index.html
@@ -56,13 +56,18 @@
         <button id='calculate'>Calculate</button>
 
         <div id="retirement-result">
-          
+
         </div>
 
         <button id="save">Save Result</button>
 
     </form>
   </div>
+
+  <ul id= 'record-list'>
+
+  </ul>
+
   <script type="text/javascript" src='src/index.js'></script>
 
 </body>
